# mariadb_documents_vectorizer

./: Cargo.toml  README.md
ressources/: test.txt
src/: error.rs  main.rs
